lintian (1.23.33) UNRELEASED; urgency=low

  * checks/common_data.pm:
    + [CW] Add automaken as a known virtual package.
    + [CW] Update architectures to dpkg 1.14.5, adding solaris-* and lpia.
  * checks/cruft{.desc,}:
    + [RA] Check for .git directories in source packages.  Thanks, Julien
      Cristau.  (Closes: #433516)
    + [RA] Substantially rewrite how all cruft checking against source
      packages is done, incorporating debdiff in the process.  There are
      now two tags for most source package cruft problems: one for files
      introduced in the Debian diff or in a native package, and one for
      files present upstream.  The former is at warning severity and the
      latter is at info severity, since it's usually not worth repackaging
      the upstream source to remove such files.  In the process,
      standardize the names of all of the tags and pull the regexes out
      into data instead of code for easier maintenance.  (Closes: #434744)
  * checks/debdiff{.desc}:
    + [RA] Removed, incorporated into checks/cruft.
  * checks/debian-readme:
    + [RA] Replace all uses of tag_error and tag_warn with just tag.
  * checks/files{.desc,}:
    + [RA] Check for .git directories in binary packages.
  * checks/menu-format{.desc,}:
    + [RA] Switch to the new menu hierarchy, which will be in the next
      release of Policy.  Add specific checks for the major renamings to
      hopefully cut down on the confusion and provide some specific
      guidance.  Remove the code that allowed for applications to create
      new sub-menus, since the current menu documentation says not to do
      that.  (Closes: #431844)
    + [RA] Add checks of desktop files.  The checks so far are basic, but
      do include key and category verification.  Based heavily on work by
      Javier Fernández-Sanguino Peña.  (Closes: #277441, #433411)
  * checks/scripts{.desc,}:
    + [RA] If rm output is redirected to /dev/null, don't think that rm is