@@ -8,7 +8,7 @@ our @EXPORT = qw
    %known_archs %known_sections %known_non_us_parts %known_archive_parts
    %known_prios %known_source_fields %known_binary_fields %known_udeb_fields
    %known_obsolete_fields %known_essential %known_build_essential
-   %known_obsolete_packages %known_virtual_packages
+   %known_obsolete_packages %known_obsolete_emacs %known_virtual_packages
    %known_libstdcs %known_tcls %known_tclxs %known_tks %known_tkxs
    %known_libpngs %known_x_metapackages
    %non_standard_archs %all_cpus %all_oses
@@ -21,7 +21,7 @@ use vars qw
   %known_archs %known_sections %known_non_us_parts %known_archive_parts
   %known_prios %known_source_fields %known_binary_fields %known_udeb_fields
   %known_obsolete_fields %known_essential %known_build_essential
-  %known_obsolete_packages %known_virtual_packages
+  %known_obsolete_packages %known_obsolete_emacs %known_virtual_packages
   %known_libstdcs %known_tcls %known_tclxs %known_tks %known_tkxs
   %known_libpngs %known_x_metapackages
   %non_standard_archs %all_cpus %all_oses
@@ -116,7 +116,11 @@ use vars qw
 %known_obsolete_packages = map { $_ => 1 }
     ('libstdc++2.8', 'ncurses3.4', 'slang0.99.38', 'newt0.25', 'mesag2',
      'libjpegg6a', 'gmp2', 'libgtop0', 'libghttp0', 'libpgsql', 'tk4.2',
-     'tcl7.6', 'libpng0g', 'xbase', 'xlibs-dev', 'debmake', 'gcc-2.95' );
+     'tcl7.6', 'libpng0g', 'xbase', 'xlibs-dev', 'debmake', 'gcc-2.95');
+
+# Still in the archive but shouldn't be the primary Emacs dependency.
+%known_obsolete_emacs = map { $_ => 1 }
+    ('emacs21');
 
 # Used only (at least lintian 1.23.1) for giving a warning about a
 # virtual-only dependency
