@@ -398,6 +398,10 @@ if (($type eq "binary") || ($type eq 'udeb')) {
 				    if ($known_virtual_packages{$alternatives[0]->[0]}
 					&& ($field eq "depends" || $field eq "pre-depends"));
 
+                                # Check defaults for transitions.  Here, we only care that the first alternative is current.
+                                tag "depends-on-old-emacs", "$field: $alternatives[0]->[0]"
+                                    if (&$is_dep_field($field) && $known_obsolete_emacs{$alternatives[0]->[0]});
+
 				for my $part_d (@alternatives) {
 					my ($d_pkg, $d_version, $d_arch, $rest, $part_d_orig) = @$part_d;
 
@@ -415,7 +419,7 @@ if (($type eq "binary") || ($type eq 'udeb')) {
 
 					tag "bad-version-in-relation", "$field: $part_d_orig"
 					    if ($d_version->[0] && ! defined((_valid_version($d_version->[1]))[1]));
-					
+
 					tag "package-relation-with-self", "$field: $part_d_orig"
 					    if ($pkg eq $d_pkg) && ($field ne 'conflicts');
 
