@@ -370,6 +370,17 @@ Tag: build-depends-on-obsolete-package
 Type: error
 Info: The package build-depends on a package that has been superseded.
 
+Tag: depends-on-old-emacs
+Type: warning
+Info: The package lists an old version of Emacs as its first dependency.
+ It should probably be updated to support the current version of Emacs
+ in the archive and then list that version first in the list of Emacs
+ flavors it supports.
+ .
+ If the package intentionally only supports older versions of Emacs (if,
+ for example, it was included with later versions of Emacs), add a lintian
+ override.
+
 Tag: depends-on-x-metapackage
 Type: error
 Info: Packages that are not themselves metapackages must not depend on X
