@@ -4,7 +4,7 @@ E: relations source: build-depends-on-build-essential build-depends-indep
 E: relations source: build-depends-on-essential-package-without-using-version build-depends-indep: bash
 E: relations source: build-depends-on-essential-package-without-using-version build-depends: findutils
 E: relations source: build-depends-on-obsolete-package build-depends-indep: debmake
-E: relations source: debian-control-with-duplicate-fields provides: 37, 38
+E: relations source: debian-control-with-duplicate-fields provides: 38, 39
 E: relations source: depends-on-build-essential-package-without-using-version libc6-dev [build-depends: libc6-dev]
 E: relations source: depends-on-build-essential-package-without-using-version make [build-depends-indep: make]
 E: relations source: invalid-arch-string-in-source-relation test [build-conflicts: bar [alpha test]]
@@ -45,6 +45,7 @@ W: relations source: virtual-package-depends-without-real-package-depends build-
 W: relations-multiple-libs: description-synopsis-might-not-be-phrased-properly
 W: relations-multiple-libs: redundant-bugs-field
 W: relations-multiple-libs: redundant-origin-field
+W: relations: depends-on-old-emacs recommends: emacs21
 W: relations: package-has-a-duplicate-relation depends: relations, relations (<< 3)
 W: relations: package-relation-with-self depends: relations
 W: relations: package-relation-with-self depends: relations (<< 3)
